# big-data-analysis

./: README.md  [Big_Data]_Quero_Empréstimo.ipynb
credit-risk/: README.md  pyproject.toml
credit-risk/app/: README.md
credit-risk/datalake/raw/: rw_credit.csv
credit-risk/notebooks/: README.md  [Big_Data]_Quero_Empréstimo.ipynb
project-ii/: Makefile  README.md  pyproject.toml
project-ii/app/: __init__.py
project-ii/app/core/config/: settings.py
project-ii/app/infrastructure/repositories/camera/: capture.py
project-ii/app/infrastructure/repositories/detector/: __init__.py
project-ii/notebooks/: projeto_ii_big_data.ipynb
