[tool.poetry]
name = "credit-risk-analysis"
version = "0.1.0"
description = "Analysing and predicting credit risk for credit company"
authors = ["Alisson Felipe <alisson.flima@souunit.com.br>",
           "Natan Nascimento <natan.oliveira@souunit.com.br>",
           "Natalia Fonseca <natalia.braga@souunit.com.br>"]
packages = [
    { include = "app" }
]

[tool.poetry.scripts]
start = "app:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
