[tool.poetry]
name = "project-ii"
version = "0.1.0"
description = "Predicting draws"
authors = ["Alisson Felipe <alisson.flima@souunit.com.br>",
           "Natan Nascimento <natan.oliveira@souunit.com.br>",
           "Natalia Fonseca <natalia.braga@souunit.com.br>"]
packages = [
    { include = "app" }
]

[tool.poetry.scripts]
start = "app:main"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^3.4.0"
imutils = "^0.5.4"
tqdm = "^4.64.0"
tensorflow = "2.3.0"
numpy = "1.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
